update package requirements

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ python-dotenv = "*"
 [packages]
 aiohttp = "*"
 httpx = "*"
+hypothesis = "*"
+hypothesis-jsonschema = "*"
+mypy="*"
 pydantic = "*"
 returns = "*"
 stackprinter = "*"
